# examples/tags/openapi.yaml
@@ -155,47 +155,66 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
-  /pet/{petId}/image:
+  /store/inventory:
     get:
       tags:
-        - media
-      operationId: getPetImage
-      parameters:
-        - name: petId
-          in: path
-          description: ID of pet to return
-          required: true
-          schema:
-            type: integer
-            format: int64
+        - store
+      operationId: getInventory
       responses:
         "200":
           description: successful operation
           content:
-            image/jpeg:
+            application/json:
               schema:
-                type: string
-                format: binary
-  /pet/{petId}/webpage:
-    get:
+                type: object
+                properties:
+                  inventory:
+                    type: object
+                    additionalProperties:
+                      type: integer
+        "default":
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /store/order:
+    post:
       tags:
-        - media
-      operationId: getPetWebpage
-      parameters:
-        - name: petId
-          in: path
-          description: ID of pet to return
-          required: true
-          schema:
-            type: integer
-            format: int64
+        - store
+      operationId: placeOrder
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                petId:
+                  type: integer
+                  format: int64
+                quantity:
+                  type: integer
+                  format: int32
+              required:
+                - petId
+                - quantity
       responses:
         "200":
           description: successful operation
           content:
-            text/html:
+            application/json:
               schema:
-                type: string
+                type: object
+                properties:
+                  order:
+                    $ref: "#/components/schemas/Order"
+        "default":
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 components:
   schemas:
     ErrorResponse:
@@ -258,3 +277,26 @@ components:
             - sold
       required:
         - status
+    Order:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        petId:
+          type: integer
+          format: int64
+        quantity:
+          type: integer
+          format: int32
+        status:
+          type: string
+          description: Order Status
+          enum:
+            - placed
+            - approved
+            - delivered
+      required:
+        - id
+        - petId
+        - quantity
